<resources>
    <string name="app_name">JKURA</string>
    <string name="jkuat">JKUAT</string>
    <string name="election_management_system">ELECTION MANAGEMENT SYSTEM</string>
    <string name="maina_josephat_students_jkuat_ac_ke">maina.josephat@students.jkuat.ac.ke</string>
    <string name="enter_your_password">Please enter the password to your account.</string>
    <string name="password">Password</string>
    <string name="proceed">proceed</string>
    <string name="jkuat_logo">jkuat-logo</string>
    <string name="active_sessions">Active Sessions</string>
    <string name="action">Action</string>
    <string name="session">Session</string>
    <string name="first_time_login">First Time Login</string>
    <string name="first_time_description">A code has been sent to your school email address. Please Enter the code below to proceed.</string>
    <string name="pin_description_text">Confirm The Pin To Continue</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="submit">submit</string>
    <string name="jkuat_name">Jomo Kenyatta University of Agriculture and Technology</string>
    <string name="submit_vote">SUBMIT VOTE</string>
    <string name="school_representative">School Representative</string>
    <string name="otp">OTP</string>
    <string name="vote">Vote</string>
    <string name="provide_pass">Please provide a password for your account</string>
    <string name="title">Title</string>
    <string name="login_error">LOGIN ERROR</string>
    <string name="email_error">You have selected an email address that isn\'t a JKUAT student\'s email address. Please select your student email address to continue.</string>
    <string name="note_email">NOTE: Any other email address will not be accepted</string>
    <string name="logout_confirm">LOGOUT</string>
    <string name="logout_confirm_message">Are you sure you want to logout?</string>
    <string name="logout_confirm_yes">YES</string>
    <string name="logout_confirm_no">NO</string>
</resources>