<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="40dp"
    android:padding="50dp"
    android:layout_marginBottom="40dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">


    <TextView
        android:id="@+id/tvErrorAlert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_black"
        android:text="@string/logout_confirm"
        android:textSize="20sp"
        android:textAlignment="center"
        android:textColor="@color/jkuraRed"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"/>

    <TextView
        android:id="@+id/tvErrorMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat"
        android:text="@string/logout_confirm_message"
        android:textSize="17sp"
        android:textAlignment="center"
        android:textColor="@color/jkuraRed"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"/>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/popYesBtn"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:text="@string/logout_confirm_yes"
            android:textColor="@color/jkuraDarkGreen"
            app:strokeColor="@color/jkuraDarkGreen"
            app:strokeWidth="2dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/popNoBtn"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:text="@string/logout_confirm_no"
            android:textColor="@color/jkuraRed"
            app:strokeColor="@color/jkuraRed"
            app:strokeWidth="2dp" />

    </RelativeLayout>

</LinearLayout>